--- a/src/e_cidadania/apps/proposals/templates/proposals/proposal_edit.html
+++ b/src/e_cidadania/apps/proposals/templates/proposals/proposal_edit.html
@@ -3,129 +3,146 @@
 {% load wysiwyg %}
 
 {% block title %}{% trans "Edit proposal" %}{% endblock %}
-{% block logo %}<a href="{{ get_place.get_absolute_url }}"><img src="{{ MEDIA_URL }}/{{ get_place.logo }}" /></a>{% endblock %}
-{% block banner %}<img src="{{ MEDIA_URL }}/{{ get_place.banner }}" />{% endblock %}
+{% block logo %}
+    {% if get_place %}
+        <a href="{{ get_place.get_absolute_url }}"><img src="{{ MEDIA_URL }}/{{ get_place.logo }}" /></a>
+    {% endif %}
+{% endblock %}
+  
+{% block banner %}
+    {% if get_place %}
+        <img src="{{ MEDIA_URL }}/{{ get_place.banner }}" />
+    {% endif %}
+{% endblock %}
 
 {% block content %}
-    <div class="grid_11">
 
-        <div id="contenttitles">
-            {% trans "Edit proposal" %}
+    <div class="row">
+        <div class="span16">
+            <h4>{% trans "Edit proposal" %}</h4>
         </div>
-
-        <form action="" method="post">{% csrf_token %}
+    </div>
+    
+    <div class="row">
+        <div class="span11">
+            <form action="" method="post">{% csrf_token %}
       
-            {{ form.non_field_errors }}
+                {{ form.non_field_errors }}
 
-            {% if user.is_staff %}
-                {% for field in form %}
-                    <div class="clearfix"> 
-                        {{ field.errors }}
-                        <label for="prependedInput">{{ field.label }}</label> 
+                {% if user.is_staff %}
+                    {% for field in form %}
+                        <div class="clearfix"> 
+                            {{ field.errors }}
+                            <label for="prependedInput">{{ field.label }}</label> 
+                            <div class="input"> 
+                                {{ field }}
+                                <span class="help-inline">{{ field.help_text }}</span>
+                            </div> 
+                        </div>
+                    {% endfor %}
+    
+                {% else %}
+        
+                    <div class="clearfix {% if form.title.errors %}error{% endif%}"> 
+                        <label for="prependedInput">{{ form.title.label }}</label> 
                         <div class="input"> 
-                            {{ field }}
-                            <span class="help-inline">{{ field.help_text }}</span>
+                            {{ form.title }}
+                            <span class="help-inline">
+                                {% if form.title.errors %}
+                                    {% for error in form.title.errors %}
+                                        {{ error|escape }}
+                                    {% endfor %}
+                                {% else %}
+                                    {{ form.title.help_text }}
+                                {% endif %}
+                            </span>
                         </div> 
                     </div>
-                {% endfor %}
-
-            {% else %}
-      
-                <div class="clearfix {% if form.title.errors %}error{% endif%}"> 
-                    <label for="prependedInput">{{ form.title.label }}</label> 
-                    <div class="input"> 
-                        {{ form.title }}
-                        <span class="help-inline">
-                            {% if form.title.errors %}
-                                {% for error in form.title.errors %}
-                                    {{ error|escape }}
-                                {% endfor %}
-                            {% else %}
-                                {{ form.title.help_text }}
-                            {% endif %}
-                        </span>
-                    </div> 
-                </div>
+                    
+                    <div class="clearfix {% if form.description.errors %}error{% endif%}">
+                        <label for="prependedInput">{{ form.description.label }}</label> 
+                        <div class="input"> 
+                            {{ form.description }}
+                            {% wysiwyg_editor "id_description" %}
+                            <span class="help-inline">
+                                {% if form.description.errors %}
+                                    {% for error in form.description.errors %}
+                                        {{ error|escape }}
+                                    {% endfor %}
+                                {% else %}
+                                    {{ form.description.help_text }}
+                                {% endif %}
+                            </span>
+                        </div> 
+                    </div>
+                    
+                    <div class="clearfix {% if form.latitude.errors %}error{% endif%}"> 
+                        {{ form.latitude.errors }}
+                        <label for="prependedInput">{{ form.latitude.label }}</label> 
+                        <div class="input"> 
+                            {{ form.latitude }}
+                            <span class="help-inline">
+                                {% if form.latitude.errors %}
+                                    {% for error in form.latitude.errors %}
+                                        {{ error|escape }}
+                                    {% endfor %}
+                                {% else %}
+                                    {{ form.latitude.help_text }}
+                                {% endif %}
+                            </span>
+                        </div> 
+                    </div>
+                    
+                    <div class="clearfix {% if form.longitude.errors %}error{% endif%}"> 
+                        {{ form.longitude.errors }}
+                        <label for="prependedInput">{{ form.longitude.label }}</label> 
+                        <div class="input"> 
+                            {{ form.longitude }}
+                            <span class="help-inline">
+                                {% if form.longitude.errors %}
+                                    {% for error in form.longitude.errors %}
+                                        {{ error|escape }}
+                                    {% endfor %}
+                                {% else %}
+                                    {{ form.longitude.help_text }}
+                                {% endif %}
+                            </span>
+                        </div> 
+                    </div>
+                    
+                    <div class="clearfix {% if form.tags.errors %}error{% endif%}"> 
+                        {{ form.tags.errors }}
+                        <label for="prependedInput">{{ form.tags.label }}</label> 
+                        <div class="input"> 
+                            {{ form.tags }}
+                            <span class="help-inline">
+                                {% if form.tags.errors %}
+                                    {% for error in form.tags.errors %}
+                                        {{ error|escape }}
+                                    {% endfor %}
+                                {% else %}
+                                    {{ form.tags.help_text }}
+                                {% endif %}
+                            </span>
+                        </div> 
+                    </div>
+    
+                {{ form.space.as_hidden }}
+                {{ form.author.as_hidden }}
+                {{ form.support_votes.as_hidden }}
+    
+                {% endif %}
                 
-                <div class="clearfix {% if form.description.errors %}error{% endif%}">
-                    <label for="prependedInput">{{ form.description.label }}</label> 
-                    <div class="input"> 
-                        {{ form.description }}
-                        {% wysiwyg_editor "id_description" %}
-                        <span class="help-inline">
-                            {% if form.description.errors %}
-                                {% for error in form.description.errors %}
-                                    {{ error|escape }}
-                                {% endfor %}
-                            {% else %}
-                                {{ form.description.help_text }}
-                            {% endif %}
-                        </span>
-                    </div> 
-                </div>
-                
-                <div class="clearfix {% if form.latitude.errors %}error{% endif%}"> 
-                    {{ form.latitude.errors }}
-                    <label for="prependedInput">{{ form.latitude.label }}</label> 
-                    <div class="input"> 
-                        {{ form.latitude }}
-                        <span class="help-inline">
-                            {% if form.latitude.errors %}
-                                {% for error in form.latitude.errors %}
-                                    {{ error|escape }}
-                                {% endfor %}
-                            {% else %}
-                                {{ form.latitude.help_text }}
-                            {% endif %}
-                        </span>
-                    </div> 
-                </div>
-                
-                <div class="clearfix {% if form.longitude.errors %}error{% endif%}"> 
-                    {{ form.longitude.errors }}
-                    <label for="prependedInput">{{ form.longitude.label }}</label> 
-                    <div class="input"> 
-                        {{ form.longitude }}
-                        <span class="help-inline">
-                            {% if form.longitude.errors %}
-                                {% for error in form.longitude.errors %}
-                                    {{ error|escape }}
-                                {% endfor %}
-                            {% else %}
-                                {{ form.longitude.help_text }}
-                            {% endif %}
-                        </span>
-                    </div> 
-                </div>
-                
-                <div class="clearfix {% if form.tags.errors %}error{% endif%}"> 
-                    {{ form.tags.errors }}
-                    <label for="prependedInput">{{ form.tags.label }}</label> 
-                    <div class="input"> 
-                        {{ form.tags }}
-                        <span class="help-inline">
-                            {% if form.tags.errors %}
-                                {% for error in form.tags.errors %}
-                                    {{ error|escape }}
-                                {% endfor %}
-                            {% else %}
-                                {{ form.tags.help_text }}
-                            {% endif %}
-                        </span>
-                    </div> 
-                </div>
-
-            {{ form.space.as_hidden }}
-            {{ form.author.as_hidden }}
-            {{ form.support_votes.as_hidden }}
-
-            {% endif %}
-            
-            <hr />
-            <a href="{{ get_place.get_absolute_url }}" class="btn danger small">&laquo; {% trans "Go back" %}</a>
-            <input class="btn small primary" type="submit" value="{% trans 'Publish' %}" />
-
-        </form>
+                <hr />
+                <a href="{{ get_place.get_absolute_url }}" class="btn danger small">&laquo; {% trans "Go back" %}</a>
+                <input class="btn small primary" type="submit" value="{% trans 'Publish' %}" />
+    
+            </form>
+        </div>
+        <div class="span5">
+            <h4>Empty space!</h4>
+        </div>
     </div>
+
 {% endblock %}
 
