--- a/src/e_cidadania/templates/comments/preview.html
+++ b/src/e_cidadania/templates/comments/preview.html
@@ -33,8 +33,8 @@
         {% endif %}
       {% endfor %}
       <p class="submit">
-      <input type="submit" name="submit" class="submit-post" value="{% trans "Post" %}" />
-      <input type="submit" name="preview" class="submit-preview" value="{% trans "Preview" %}" />
+      <input type="submit" name="submit" class="submit-post btn" value="{% trans "Post" %}" />
+      <input type="submit" name="preview" class="submit-preview btn" value="{% trans "Preview" %}" />
       </p>
     </form>
   
