--- a/src/e_cidadania/apps/debate/templates/debate/debate_view.html
+++ b/src/e_cidadania/apps/debate/templates/debate/debate_view.html
@@ -6,15 +6,30 @@
 {% block logo %}<a href="{{ get_place.get_absolute_url }}"><img src="{{ MEDIA_URL }}/{{ get_place.logo }}" /></a>{% endblock %}
 {% block banner %}<img src="{{ MEDIA_URL }}/{{ get_place.banner }}" />{% endblock %}
 
+{% block space %}
+    <a class="brand" href="{{ get_place.get_absolute_url }}">{{ get_place.name }}</a>
+{% endblock %}
+
 {% block content %}
 
-    {% block centercol %}
-        <div class="grid_16">
-
-            <div id="contenttitles">
-                {% trans "View debate" %} {{ debate.title}}
-            </div>
-
+    <div class="row">
+        <div class="span16">
+            <h4>{{ debate.title}}</h4>
+        </div>
+    </div>
+    
+    <div class="row">
+        <div class="span8">
+            <p><strong>{% trans "Description" %}</strong>: {{ debate.description }}</p>
+            <p><strong>{% trans "Scope" %}:</strong> {{ debate.scope }}</p>
+        </div>
+        <div class="span8">
+            This space is meant for the start and end fields
+        </div>
+    </div>
+    
+    <div class="row">
+        <div class="span16">
             <div id="debate-number" class="hidden">{{ debate.pk }}</div>
             <div id="last-note" class="hidden">{{ lastnote }}</div>
             
@@ -77,11 +92,9 @@
                 </div>
                 
             </div>
-
-            <script src="{{ STATIC_URL }}/js/debate_board.js" type="text/javascript"></script>
-
+            
         </div>
+    </div>
 
-    {% endblock %}
-
+    <script src="{{ STATIC_URL }}/js/debate_board.js" type="text/javascript"></script>
 {% endblock %}
