--- a/src/e_cidadania/apps/news/templates/news/post_add.html
+++ b/src/e_cidadania/apps/news/templates/news/post_add.html
@@ -16,115 +16,114 @@
     {% endif %}
 {% endblock %}
 
+{% if get_place %}
+    {% block space %}
+        <a class="brand" href="{{ get_place.get_absolute_url }}">{{ get_place.name }}</a>
+    {% endblock %}
+{% endif %}
+
 {% block content %}
 
-    <div class="grid_16">
-        <div id="contenttitles">
-            {% trans "Add new post" %}
+    <div class="row">
+        <div class="span16">
+            <h4>{% trans "Add new post" %}</h4>
         </div>
     </div>
-  
-    {% block centercol %}
-        <div class="grid_11">
+    
+    <div class="row">
+        <div class="span11">
             <form action="" method="post">{% csrf_token %}
 
-                {% if form.non_field_errors %}
-                    {% for error in form.non_field_errors %}
-                        <span class="help-inline">{{ error|escape }}</span>
-                    {% endfor %}
-                {% endif %}
+            {% if form.non_field_errors %}
+                {% for error in form.non_field_errors %}
+                    <span class="help-inline">{{ error|escape }}</span>
+                {% endfor %}
+            {% endif %}
 
-                <div class="clearfix {% if form.post_title.errors %}error{% endif%}"> 
-                    <label for="prependedInput">{{ form.post_title.label }}</label> 
-                    <div class="input"> 
-                        {{ form.post_title }}
-                        <span class="help-inline">
-                            {% if form.post_title.errors %}
-                                {% for error in form.post_title.errors %}
-                                    {{ error|escape }}
-                                {% endfor %}
-                            {% else %}
-                                {{ form.post_title.help_text }}
-                            {% endif %}
-                        </span>
-                    </div> 
-                </div>
-        
-                <div class="clearfix {% if form.post_message.errors %}error{% endif%}"> 
-                    <label for="prependedInput">{{ form.post_message.label }}</label> 
-                    <div class="input"> 
-                        {{ form.post_message }}
-                        {% wysiwyg_editor "id_post_message" %}
-                        <span class="help-inline">
-                            {% if form.post_message.errors %}
-                                {% for error in form.post_message.errors %}
-                                    {{ error|escape }}
-                                {% endfor %}
-                            {% else %}
-                                {{ form.post_message.help_text }}
-                            {% endif %}
-                        </span>
-                    </div> 
-                </div>
-        
-                <div class="clearfix {% if form.post_tags.errors %}error{% endif%}"> 
-                    <label for="prependedInput">{{ form.post_tags.label }}</label> 
-                    <div class="input"> 
-                        {{ form.post_tags }}
-                        <span class="help-inline">
-                            {% if form.post_tags.errors %}
-                                {% for error in form.post_tags.errors %}
-                                    {{ error|escape }}
-                                {% endfor %}
-                            {% else %}
-                                {{ form.post_tags.help_text }}
-                            {% endif %}
-                        </span>
-                    </div> 
-                </div>
-
-                <div class="clearfix {% if form.pub_index.errors %}error{% endif%}"> 
-                    <label for="prependedInput">{{ form.pub_index.label }}</label> 
-                    <div class="input"> 
-                        {{ form.pub_index }}
-                        <span class="help-inline">
-                            {% if form.pub_index.errors %}
-                                {% for error in form.pub_index.errors %}
-                                    {{ error|escape }}
-                                {% endfor %}
-                            {% else %}
-                                {{ form.pub_index.help_text }}
-                            {% endif %}
-                        </span>
-                    </div> 
-                </div>
-        
-                {{ form.author.as_hidden }}
-                {{ form.space.as_hidden }}
-
-                <hr />
-                <a href="{{ get_place.get_absolute_url }}" class="btn danger small">&laquo; {% trans "Go back" %}</a>
-                <input class="btn small primary" type="submit" value="{% trans 'Publish' %}" />
-        
-            </form>
-        </div>
-
-    {% endblock %}
-
-
-    {% block rightcol %}
-        <div class="grid_5">
-            <div id="widget">
-                <h2>{% trans "How to add new posts" %}</h2><br/>
-                <ul class="instructions">
-                    <li><strong>{% trans "Title" %}</strong>: {% trans "An spectacular title! (100 characters)" %}</li>
-                    <li><strong>{% trans "Text" %}</strong>: {% trans "Your story." %}</li>
-                    <li><strong>{% trans "Tags" %}</strong>: {% trans "Please use them carefully, you are limited to 4 tags." %}</li>
-                    <li><strong>{% trans "Publish in index" %}</strong>: {% trans "If you mark this, the post will appear in the spaces index page AND in the main index." %}</li>
-                </ul>
+            <div class="clearfix {% if form.post_title.errors %}error{% endif%}"> 
+                <label for="prependedInput">{{ form.post_title.label }}</label> 
+                <div class="input"> 
+                    {{ form.post_title }}
+                    <span class="help-inline">
+                        {% if form.post_title.errors %}
+                            {% for error in form.post_title.errors %}
+                                {{ error|escape }}
+                            {% endfor %}
+                        {% else %}
+                            {{ form.post_title.help_text }}
+                        {% endif %}
+                    </span>
+                </div> 
             </div>
+        
+            <div class="clearfix {% if form.post_message.errors %}error{% endif%}"> 
+                <label for="prependedInput">{{ form.post_message.label }}</label> 
+                <div class="input"> 
+                    {{ form.post_message }}
+                    {% wysiwyg_editor "id_post_message" %}
+                    <span class="help-inline">
+                        {% if form.post_message.errors %}
+                            {% for error in form.post_message.errors %}
+                                {{ error|escape }}
+                            {% endfor %}
+                        {% else %}
+                            {{ form.post_message.help_text }}
+                        {% endif %}
+                    </span>
+                </div> 
+            </div>
+        
+            <div class="clearfix {% if form.post_tags.errors %}error{% endif%}"> 
+                <label for="prependedInput">{{ form.post_tags.label }}</label> 
+                <div class="input"> 
+                    {{ form.post_tags }}
+                    <span class="help-inline">
+                        {% if form.post_tags.errors %}
+                            {% for error in form.post_tags.errors %}
+                                {{ error|escape }}
+                            {% endfor %}
+                        {% else %}
+                            {{ form.post_tags.help_text }}
+                        {% endif %}
+                    </span>
+                </div> 
+            </div>
+
+            <div class="clearfix {% if form.pub_index.errors %}error{% endif%}"> 
+                <label for="prependedInput">{{ form.pub_index.label }}</label> 
+                <div class="input"> 
+                    {{ form.pub_index }}
+                    <span class="help-inline">
+                        {% if form.pub_index.errors %}
+                            {% for error in form.pub_index.errors %}
+                                {{ error|escape }}
+                            {% endfor %}
+                        {% else %}
+                            {{ form.pub_index.help_text }}
+                        {% endif %}
+                    </span>
+                </div> 
+            </div>
+        
+            {{ form.author.as_hidden }}
+            {{ form.space.as_hidden }}
+
+            <hr />
+            <a href="{{ get_place.get_absolute_url }}" class="btn danger small">&laquo; {% trans "Go back" %}</a>
+            <input class="btn small primary" type="submit" value="{% trans 'Publish' %}" />
+        
+           </form>
         </div>
-    {% endblock %}
+        <div class="span5">
+            <h4>{% trans "How to add new posts" %}</h4>
+            <ul class="instructions">
+                <li><strong>{% trans "Title" %}</strong>: {% trans "An spectacular title! (100 characters)" %}</li>
+                <li><strong>{% trans "Text" %}</strong>: {% trans "Your story." %}</li>
+                <li><strong>{% trans "Tags" %}</strong>: {% trans "Please use them carefully, you are limited to 4 tags." %}</li>
+                <li><strong>{% trans "Publish in index" %}</strong>: {% trans "If you mark this, the post will appear in the spaces index page AND in the main index." %}</li>
+            </ul>
+        </div>
+    </div>
 
 {% endblock %}
 
