--- a/src/e_cidadania/apps/news/templates/news/post_confirm_delete.html
+++ b/src/e_cidadania/apps/news/templates/news/post_confirm_delete.html
@@ -19,28 +19,26 @@
     {% endif %}
 {% endblock %}
 
+{% if get_place %}
+    {% block space %}
+        <a class="brand" href="{{ get_place.get_absolute_url }}">{{ get_place.name }}</a>
+    {% endblock %}
+{% endif %}
+
 {% block content %}
 
-    {% block centercol %}
-        <div class="grid_16">
-            <div id="contenttitles">
-                {% trans "Delete post" %}
-            </div>
-
+    <div class="row">
+        <div class="span16">
+            <h4>{% trans "Delete post" %}</h4>
             <form action="" method="post">{% csrf_token %}
                 <p>{% trans "Are you sure you want to delete this post? This action cannot be undone." %}</p>
 
                 <hr />
                 <a href="{{ get_place.get_absolute_url }}" class="btn small">&laquo; {% trans "Go back" %}</a>
                 <input class="btn small danger" type="submit" value="{% trans 'Delete' %}" />
-        </form>
+            </form>
+        </div>
     </div>
-
-  {% endblock %}
-
-
-  {% block rightcol %}
-  {% endblock %}
 
 {% endblock %}
 
