--- a/src/e_cidadania/apps/news/templates/news/post_edit.html
+++ b/src/e_cidadania/apps/news/templates/news/post_edit.html
@@ -15,16 +15,21 @@
     {% endif %}
 {% endblock %}
 
+{% if get_place %}
+    {% block space %}
+        <a class="brand" href="{{ get_place.get_absolute_url }}">{{ get_place.name }}</a>
+    {% endblock %}
+{% endif %}
+
 {% block content %}
 
-    <div class="grid_16">
-        <div id="contenttitles">
-            {% trans "Edit post" %}
+    <div class="row">
+        <div class="span16">
+            <h4>{% trans "Edit post" %}</h4>
         </div>
     </div>
-  
-    {% block centercol %}
-        <div class="grid_11">
+    <div class="row">
+        <div class="span11">
             <form enctype="multipart/form-data" action="" method="post">{% csrf_token %}
 
                 {% if form.non_field_errors %}
@@ -136,7 +141,10 @@
             
             </form>
         </div>
-    {% endblock %}
+        <div class="span5">
+            <h4>Empty space!</h4>
+        </div>
+    </div>
 
 {% endblock %}
 
