--- a/src/e_cidadania/apps/proposals/templates/proposals/proposal_confirm_delete.html
+++ b/src/e_cidadania/apps/proposals/templates/proposals/proposal_confirm_delete.html
@@ -2,32 +2,31 @@
 {% load i18n %}
 
 {% block title %}{% trans "Delete proposal" %}{% endblock %}
-{% block logo %}<a href="{{ get_place.get_absolute_url }}"><img src="{{ MEDIA_URL }}/{{ get_place.logo }}" /></a>{% endblock %}
-{% block banner %}<img src="{{ MEDIA_URL }}/{{ get_place.banner }}" />{% endblock %}
+{% block logo %}
+    {% if get_place %}
+        <a href="{{ get_place.get_absolute_url }}"><img src="{{ MEDIA_URL }}/{{ get_place.logo }}" /></a>
+    {% endif %}
+{% endblock %}
+  
+{% block banner %}
+    {% if get_place %}
+        <img src="{{ MEDIA_URL }}/{{ get_place.banner }}" />
+    {% endif %}
+{% endblock %}
 
 {% block content %}
 
-  {% block centercol %}
-    <div class="grid_11">
-    
-        <div id="contenttitles">
-            {% trans "Delete proposal" %}
-        </div>
-        
-        <form action="" method="post">{% csrf_token %}
-            <p>{% trans "Are you sure you want to delete this proposal? This action cannot be undone." %}</p>
+    <div class="row">
+        <div class="span16">
+            <h4>{% trans "Delete proposal" %}</h4>
+            <form action="" method="post">{% csrf_token %}
+                <p>{% trans "Are you sure you want to delete this proposal? This action cannot be undone." %}</p>
 
-            <hr />
-            <a href="{{ get_place.get_absolute_url }}" class="btn small">&laquo; {% trans "Go back" %}</a>
-            <input class="btn small danger" type="submit" value="{% trans 'Delete' %}" />
-        </form>
+                <hr />
+                <a href="{{ get_place.get_absolute_url }}" class="btn small">&laquo; {% trans "Go back" %}</a>
+                <input class="btn small danger" type="submit" value="{% trans 'Delete' %}" />
+            </form>
+        </div>
     </div>
-
-    {% endblock %}
-
-    {% block rightcol %}
-        <div class="grid_5">
-        </div>
-    {% endblock %}
 
 {% endblock %}
