--- a/src/e_cidadania/apps/proposals/templates/proposals/proposal_list.html
+++ b/src/e_cidadania/apps/proposals/templates/proposals/proposal_list.html
@@ -8,8 +8,8 @@
 
 {% block content %}
 
-    {% block centercol %}
-        <div class="grid_11">
+    <div class="row">
+        <div class="span11">
             {% for p in object_list %}
                 <div id="proposal-wrapper">
                     {% if perms.proposals.add_proposal %}
@@ -39,33 +39,31 @@
                     <div style="clear:left;"></div>
                 </div>
             {% empty %}
-                <p>{% trans "There are no proposals for this space." %}</p>
+                <p>{% trans "There are no proposals for this space" %}.</p>
             {% endfor %}
-        </div>
     
-        <hr />
-        <a href="/" class="btn small">&laquo; {% trans "Go back" %}</a>
+            <hr />
+            <a href="/" class="btn small">&laquo; {% trans "Go back" %}</a>
   
-        {% if is_paginated %}
-            <div class="pagination">
-                <span class="page-links">
-                    {% if page_obj.has_previous %}
-                        <a href="{% url 'list-proposals' get_place.url %}?page={{ page_obj.previous_page_number }}">&laquo; {% trans "previous" %} | </a>
-                    {% endif %}
-                    <span class="page-current">
-                        {{ page_obj.number }} {% trans "of" %} {{ page_obj.paginator.num_pages }}
+            {% if is_paginated %}
+                <div class="pagination">
+                    <span class="page-links">
+                        {% if page_obj.has_previous %}
+                            <a href="{% url 'list-proposals' get_place.url %}?page={{ page_obj.previous_page_number }}">&laquo; {% trans "previous" %} | </a>
+                        {% endif %}
+                        <span class="page-current">
+                            {{ page_obj.number }} {% trans "of" %} {{ page_obj.paginator.num_pages }}
+                        </span>
+                        {% if page_obj.has_next %}
+                            <a href="{% url 'list-proposals' get_place.url %}?page={{ page_obj.next_page_number }}">| {% trans "next" %} &raquo;</a>
+                        {% endif %}
                     </span>
-                    {% if page_obj.has_next %}
-                        <a href="{% url 'list-proposals' get_place.url %}?page={{ page_obj.next_page_number }}">| {% trans "next" %} &raquo;</a>
-                    {% endif %}
-                </span>
-            </div>
-        {% endif %}
-    {% endblock %}
-
-    {% block rightcol %}
-        <div class="grid_5">
+                </div>
+            {% endif %}
         </div>
-    {% endblock%}
+        <div class="span5">
+            <h4>Empty space!</h4>
+        </div>
+    </div>
 
 {% endblock %}
