--- a/src/e_cidadania/apps/spaces/templates/spaces/space_confirm_delete.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/space_confirm_delete.html
@@ -5,11 +5,16 @@
 {% block logo %}<a href="{{ get_place.get_absolute_url }}"><img src="{{ MEDIA_URL }}/{{ get_place.logo }}" /></a>{% endblock %}
 {% block banner %}<img src="{{ MEDIA_URL }}/{{ get_place.banner }}" />{% endblock %}
 
+{% block space %}
+    <a class="brand" href="{{ get_place.get_absolute_url }}">{{ get_place.name }}</a>
+{% endblock %}
+
 {% block content %}
 
-    {% block centercol %}
-        <div class="grid_16">
+    <div class="row">
+        <div class="span16">
             <form action="" method="post">{% csrf_token %}
+                <h4>{% trans "Delete space" %}</h4>
                 <p>{% trans "Are you sure you want to delete this space? This action cannot be undone." %}</p>
 
                 <hr />
@@ -17,11 +22,6 @@
                 <input class="btn small danger" type="submit" value="{% trans 'Delete' %}" />
             </form>
         </div>
-
-    {% endblock %}
-
-
-    {% block rightcol %}
-    {% endblock %}
+    </div>
 
 {% endblock %}
