--- a/src/e_cidadania/apps/userprofile/templates/userprofile/account/login.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/account/login.html
@@ -1,61 +1,54 @@
 {% extends "base.html" %}
 {% load i18n %}
 
-{% if messages %}
-  <ul class="messages">
-    {% for message in messages %}
-      <li {% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
-    {% endfor %}
-  </ul>
-{% endif %}
-
 {% block title %}{% trans "User login" %}{% endblock %}
 {% block robots %}noindex,nofollow{% endblock %}
 
-<ul class="messages">
-    {% for message in messages %}
-    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-    {% endfor %}
-</ul>
-
 {% block content %}
-  <div class="grid_16">
   
-    <div id="loginblock">
-	    <form action="{% if next %}?next={{ next }}{% endif %}" method="post" accept-charset="utf-8" class="form-stacked">{% csrf_token %}
-	      <fieldset>
-		      <legend>{% trans "User login" %}</legend>
-		      
-		      <div class="clearfix">
-		          <label for="id_username">{% trans "Username" %}</label>
-		          <div class="input">
-		              {{ form.username }}
-			          {% if form.username.errors %}
-				          <span class="help-inline">{{ form.username.html_error_list }}</span>
-			          {% endif %}
-			      </div>
-			  </div>
-		
-		      <div class="clearfix">
-		          <label for="id_password">{% trans "Password" %}</label>
-		          <div class="input">
-		              {{ form.password }}
-		              {% if form.password.errors %}
-				          <span class="help-inline">{{ form.password.html_error_list }}</span>
-			          {% endif %}
+<div class="row" style="margin-top:100px;margin-bottom:100px;">
+    <div class="span6 offset5">
+	        <form action="{% if next %}?next={{ next }}{% endif %}" method="post" accept-charset="utf-8" class="form-stacked">{% csrf_token %}
+	          <fieldset>
+		          <legend>{% trans "User login" %}</legend>
+		          
+		          <div class="clearfix">
+		              <label for="id_username">{% trans "Username" %}</label>
+		              <div class="input">
+		                  {{ form.username }}
+		    	          {% if form.username.errors %}
+		    		          <span class="help-inline">{{ form.username.html_error_list }}</span>
+		    	          {% endif %}
+		    	      </div>
+		    	  </div>
+		    
+		          <div class="clearfix">
+		              <label for="id_password">{% trans "Password" %}</label>
+		              <div class="input">
+		                  {{ form.password }}
+		                  {% if form.password.errors %}
+		    		          <span class="help-inline">{{ form.password.html_error_list }}</span>
+		    	          {% endif %}
+		              </div>
 		          </div>
-		      </div>
-		      {% if form.non_field_errors %}
-			      <ul class="help-inline">{{ form.non_field_errors.as_ul }}</ul>
-		      {% endif %}
-	      </fieldset><br />
-	
-	    <p><input type="submit" value="{% trans 'Login' %}" />
-	      <a href="{% url 'password_reset' %}">{% trans "Lost your password?" %}</a> /
-	      <a href="{% url 'signup' %}">{% trans "Sign up!" %}</a>
-	    </p>
-	  </form>
-  </div>
+		          {% if form.non_field_errors %}
+		    	      <ul class="help-inline">{{ form.non_field_errors.as_ul }}</ul>
+		          {% endif %}
+	          </fieldset><br />
+	    
+	        <p><input type="submit" class="btn" value="{% trans 'Login' %}" /></p>
+	    </form>
+    </div>
+    <div class="span5">
+        <h4>{% trans "Helpful links" %}</h4>
+        <a href="{% url 'password_reset' %}">{% trans "Recover your password" %}</a><br />
+        <a href="{% url 'signup' %}">{% trans "Sign up!" %}</a><br />
+        <h4>{% trans "Invite your friends" %}</h4>
+        <a href="#">{% trans "Via e-mail" %}</a><br />
+        <a href="#">{% trans "Via Twitter" %}</a><br />
+        <a href="#">{% trans "Via Facebook" %}</a><br />
+        <a href="#">{% trans "Via Google Plus" %}</a><br />
+    </div>
 
 </div>
 {% endblock %}
