--- a/src/e_cidadania/templates/comments/form.html
+++ b/src/e_cidadania/templates/comments/form.html
@@ -25,7 +25,7 @@
     
   {% endfor %}
   <p class="submit">
-    <input type="submit" name="post" class="submit-post" value="{% trans "Post" %}" />
-    <input type="submit" name="preview" class="submit-preview" value="{% trans "Preview" %}" />
+    <input type="submit" name="post" class="submit-post btn" value="{% trans "Post" %}" />
+    <input type="submit" name="preview" class="submit-preview btn" value="{% trans "Preview" %}" />
   </p>
 </form>
