--- a/src/e_cidadania/templates/menu.html
+++ b/src/e_cidadania/templates/menu.html
@@ -1,62 +1,40 @@
 {% load i18n %}
-    {% if user.is_authenticated %}
-        <ul class="topnav">
-            <li><a href="/">{% trans "Home" %}</a></li>
-
-            <li class="sep"></li>      
-      
-            <li>
-                <form action="/i18n/setlang/" method="post">{% csrf_token %}
-                    <input name="next" type="hidden" value="/" />
-                    <select id="language" name="language" onchange="this.form.submit()">
-                        <option>{% trans "Language" %}</option>
-                        {% for lang in LANGUAGES %}
-                            <option value="{{ lang.0 }}">{{ lang.1 }}</option>
-                        {% endfor %}
-                    </select>
-                </form>
-            </li>
-      
-            <li class="sep"></li>
-      
-            <li>
-                <a href="{% url 'profile_overview' %}" class="username">
-                    {% if user.get_profile.firstname %}
-                        {{ user.get_profile.firstname }} {{ user.get_profile.surname }}
-	                {% else %}
-	                    {{ user.username }}
-	                {% endif %}
-	            </a>
-	            <ul class="subnav">
-                    {% if user.is_staff %}
-	                    <li><a href="{% url 'admin:index' %}">{% trans "Administration" %}</a></li>
-	                    <li><a href="{% url 'rosetta-home' %}">{% trans "Translation" %}</a></li>
-	                {% endif %}
-	                <li><a href="/accounts/messages">{% trans "Messages" %}</a></li>
-	                <li><a href="{% url 'profile_edit_personal' %}">{% trans "Edit profile" %}</a></li>
-	                <li><a href="{% url 'logout' %}">{% trans "Logout" %}</a></li>
-	            </ul>
-	        </li>
-	    </ul>
-    {% else %}
-        <ul class="topnav">
-            <li><a href="/">{% trans "Home" %}</a></li>
-            <li class="sep"></li>
-            <li><a href="{% url 'login' %}">{% trans "Login" %}</a></li>
-            
-            <li class="sep"></li>
-            
-            <li>
-                <form action="/i18n/setlang/" method="post">{% csrf_token %}
-                    <input name="next" type="hidden" value="/" />
-                    <select id="language" name="language" onchange="this.form.submit()">
-                        <option>{% trans "Language" %}</option>
-                        {% for lang in LANGUAGES %}
-                            <option value="{{ lang.0 }}">{{ lang.1 }}</option>
-                        {% endfor %}
-                    </select>
-                </form>
-            </li>
-	    </ul>
-	{% endif %}
-
+<ul class="nav">
+    <li class="active"><a href="/">{% trans "Home" %}</a></li>
+    {% if not user.is_authenticated %}
+        <li><a href="{% url 'login' %}">{% trans "Login" %}</a></li>
+        <li><a href="{% url 'signup' %}">{% trans "Sign up" %}</a></li>
+    {% endif %}
+</ul>
+{% if user.is_authenticated %}
+    <ul class="nav secondary-nav">
+        <li class="dropdown" data-dropdown="dropdown">
+            <a href="#" class="dropdown-toggle">
+                {% if user.get_profile.firstname %}
+                    {{ user.get_profile.firstname }} {{ user.get_profile.surname }}
+	            {% else %}
+	                {{ user.username }}
+	            {% endif %}
+	        </a>
+	        <ul class="dropdown-menu">
+	            {% if user.is_staff %}
+	                <li><a href="{% url 'admin:index' %}">{% trans "Administration" %}</a></li>
+	                <li><a href="{% url 'rosetta-home' %}">{% trans "Translation" %}</a></li>
+	            {% endif %}
+	            <li><a href="{% url 'profile_edit_personal' %}">{% trans "Edit profile" %}</a></li>
+	            <li class="divider"></li>
+	            <li><a href="{% url 'logout' %}">{% trans "Logout" %}</a></li>
+	        </ul>
+        </li>
+    </ul>
+    <p class="pull-right"><a href="{% url 'profile_overview' %}">{% trans "Profile" %}</a></p>
+{% endif %}
+<form action="/i18n/setlang/" method="post" class="pull-right">{% csrf_token %}
+    <input name="next" type="hidden" value="/" />
+    <select id="language" name="language" onchange="this.form.submit()">
+        <option>{% trans "Language" %}</option>
+        {% for lang in LANGUAGES %}
+            <option value="{{ lang.0 }}">{{ lang.1 }}</option>
+        {% endfor %}
+    </select>
+</form>
